# watermeterreader

./: .gitignore  LICENSE  LICENSE.md  README.md  datatogsheets.py  detect_roi.py  digitprocessingfortemplate.py  main.py  pyproject.toml  reader_pytesseract_ocr.py  requirements.txt  selectroi.py  testimage.py  watermeterreader-tm.py  watermeterreadermac.py  watermeterreaderraspberry.py
notebooks/: ds_watermeterreader.ipynb
src/: templatematching.py  watermeterreadermac.py
src/scripts/: datatogsheets.py  selectroi.py  testimage.py
src/ueiya/: config.py
src/ueiya/reader/: watermeterreadermac.py
src/ueiya/reader/util/: util.py
