[tool.poetry]
name = "poetry-watermeterreader"
version = "0.1.0"
description = ""
authors = ["Sundaresh Ramakrishnaiah"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pytesseract = "^0.3.10"
easyocr = "^1.6.2"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"
datetime = "^5.0"
black = "^23.1.0"
isort = "^5.12.0"
imutils = "^0.5.4"
opencv-contrib-python = "4.5.4.60"
opencv-python = "4.5.4.60"
pkgconfig = "^1.5.5"
opencv-python-headless = "4.5.4.60"
paddleocr = "^2.6.1.3"
tesseract = "^0.1.3"
loguru = "^0.7.0"
pillow = "^9.5.0"
keras = "^2.12.0"
tensorflow = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"